--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                 <p><b>email: </b><a href="mailto:veronicadpcruz@gmail.com">veronicadpcruz@gmail.com</a></p>
                 <p><b>linkedin: </b><a href="https://www.linkedin.com/in/veronicadcruz/">https://www.linkedin.com/in/veronicadcruz/</a></p>
                 <p></p>
-                <a href='home.html'><img src='assets/home.png'></a><a href='about.html'><img src="assets/about.png"><a href='resume.html'><img src="assets/resume.png"><a href='contact.html'><img src='assets/contact.png'></a>            </div>
+                <a href='index.html'><img src='assets/home.png'></a><a href='about.html'><img src="assets/about.png"><a href='resume.html'><img src="assets/resume.png"><a href='contact.html'><img src='assets/contact.png'></a>
             </div>
         </span>
       
