--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src='assets/home_image.png'>
             <div>
                 <p></p>
-                <a href='home.html'><img src='assets/home.png'></a><a href='about.html'><img src="assets/about.png"><a href='resume.html'><img src="assets/resume.png"><a href='contact.html'><img src='assets/contact.png'></a>
+                <a href='index.html'><img src='assets/home.png'></a><a href='about.html'><img src="assets/about.png"><a href='resume.html'><img src="assets/resume.png"><a href='contact.html'><img src='assets/contact.png'></a>
             </div>
         </span>
       
