added google analytics

--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z1QSSHHHXP"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-Z1QSSHHHXP');
+            </script>
         <title>resume | veronica cruz</title>
         <link rel="shortcut icon" type="image/jpg" href="assets/favicon.png"/>
         <script src="https://kit.fontawesome.com/505ffdc891.js" crossorigin="anonymous"></script>
