--- a/about.html
+++ b/about.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z1QSSHHHXP"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-Z1QSSHHHXP');
+        </script>
         <title>about | veronica cruz</title>
         <link rel="shortcut icon" type="image/jpg" href="assets/favicon.png"/>
     </head>
