fixed scrolling issues

--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,12 @@
                 background-image: linear-gradient(to bottom right, #4B73FF, #AFC1FF);
 
                 margin: 0px 0px 0px 0px;
-                position:fixed;
-                width:100%;
-                height:100%;
+                min-height:100vh;
+                position: absolute;
+                width: 100%;
                 top:0px;
                 left:0px;
-                z-index:1000;
+                /* z-index:1000; */
             
             }
 
@@ -93,7 +93,7 @@
         <div class='page'>
             <div class='content'>
                     <div>
-                        <h1 style='display:inline-block; padding: 0px 50px 0px 0px; font-size: 72px;'>veronica cruz</h1>
+                        <h1 style='display:inline-block; padding: 0px 50px 0px 0px; font-size: 64px;'>veronica cruz</h1>
                         <a href='index.html' class='button menubutton'>home</a></button>
                         <a href='about.html'class='button menubutton'>about</a></button>
                         <a href='resume.html' class='button menubutton'>resume</a></button>
