--- a/about.html
+++ b/about.html
@@ -26,9 +26,11 @@
                 background-image: linear-gradient(to bottom right, #4B73FF, #AFC1FF);
 
                 margin: 0px 0px 0px 0px;
-                position:fixed;
-                width:100%;
-                height:100%;
+                min-height:100vh;
+                position: absolute;
+                min-width:100vh;
+                /* height:100%; */
+                background-size: cover;
                 top:0px;
                 left:0px;
                 z-index:1000;
@@ -50,6 +52,15 @@
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 border-radius: 30px;
                 box-shadow: 0 20px 40px 0 #5162A0;
+            }
+
+            .image{
+                width:25%;
+                transform: translate(25%, 0);
+            }
+
+            .text{
+                width:75%;
             }
 
             hr {
@@ -108,7 +119,7 @@
             <div class='content'>
 
                 <div class='center'>
-                    <h1 style='display:inline-block; padding: 0px 50px 0px 0px; font-size: 72px;'>veronica cruz</h1>
+                    <h1 style='display:inline-block; padding: 0px 50px 0px 0px; font-size: 64px;'>veronica cruz</h1>
                     <a href='index.html' class='button menubutton'>home</a></button>
                     <a href='about.html'class='button menubutton'>about</a></button>
                     <a href='resume.html' class='button menubutton'>resume</a></button>
@@ -120,14 +131,14 @@
                         <h1><em>who am i?</em></h1>
                     </div> 
                     <div class='container'>
-                        <div style='display:inline-block;'>
+                        <div class = "image" style='display:inline-block;'>
                             <img src="assets/veronicacruz.png"
                             width="250"
                             height='auto'
-                            style='margin-left: 75px;'>
+                            >
                         </div>
 
-                        <div class='leftalign'>
+                        <div class='leftalign text'>
                             <p>I am a freshman computer science student at the University of Maryland, College Park. Lately, I have focused on expanding my 
                                 experience to different subject matters, from machine learning to law and from business to language learning. I have spent my summer
                                 learning Korean, researching entrepreneurship and startups, and practicing my coding skills in Python and HTML. 
