--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 background-image: linear-gradient(to bottom right, #4B73FF, #AFC1FF);
 
                 margin: 0px 0px 0px 0px;
-                position:fixed;
+                position:absolute;
                 width:100%;
-                height:100%;
+                min-height: 100vh;
                 top:0px;
                 left:0px;
                 z-index:1000;
